--- a/src/view/domino/propertyEditors/DominoComputedTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoComputedTextPropertyEditor.mxml
@@ -3,12 +3,14 @@
                                   xmlns:s="library://ns.adobe.com/flex/spark"
                                   xmlns:suportclasses="view.suportClasses.*"
                                   xmlns:primeFaces="view.primeFaces.forms.*" xmlns:forms="view.forms.*"
-								  xmlns:domino="view.domino.forms.*" >
+								  xmlns:domino="view.domino.forms.*" 
+								   creationComplete="onInputCreationComplete(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
 			import mx.controls.listClasses.ListBaseContentHolder;
 			import mx.controls.Alert;
+			import mx.events.FlexEvent;
 
 			private var pre_label_var:String="normal";
 
@@ -184,6 +186,31 @@
 					}
 				}
 			}
+
+			private function onInputCreationComplete(event:FlexEvent):void
+        	{
+				 //inistal hide options
+				 if(this.selectedItem["hide"]!=null && this.selectedItem["hide"].length>0 || this.selectedItem["hidewhen"]!=null){
+					 this.hideOption.selected = true;
+					 if(this.hideOption.selected){
+						hidePanel.visible = hidePanel.includeInLayout = true;
+					 }else{
+						hidePanel.visible = hidePanel.includeInLayout = false;
+					 }
+				 }
+
+				
+			}
+
+			private function changeHideOption(event:Event):void
+			{
+				if(this.hideOption.selected){
+					hidePanel.visible = hidePanel.includeInLayout = true;
+				}else{
+					hidePanel.visible = hidePanel.includeInLayout = false;
+				}
+			
+			}
 		]]>
 	</fx:Script>
     <suportclasses:layout>
@@ -204,7 +231,26 @@
 		<domino:MultipleCheckbox label="Style:" 
 		optionExculdeFunction="excludeMultipleSelect"
 		collectionProperty="fontStyles" textProperty="fontStyle"/>	
-	<domino:HideOptions textProperty="hide"/>
+	
+	<s:FormItem label="Hide option" skinClass="skins.FormItemSkin">
+	<s:CheckBox id="hideOption"
+				selected="false"
+				change="changeHideOption(event)"/>
+	</s:FormItem>
+	
+	<s:BorderContainer 
+             cornerRadius="0"
+            borderStyle="solid" borderWeight="0" 
+            left="0" right="0" top="10" bottom="10" width="330" includeInLayout="false" visible="false" id="hidePanel">
+			<s:VGroup horizontalAlign="left" verticalAlign="middle" percentHeight="100" 
+		   paddingLeft="5" paddingTop="10" paddingBottom="10" >		
+
+	<domino:HideOptions textProperty="hide"/>	
+	<s:Label text="Hide paragraph if formual is true"/>
+	 <forms:DominoFormulaForm  textProperty="hidewhen" prompt="" id="hidewhen"   />
+              
+	 </s:VGroup> 
+	</s:BorderContainer>  
     <forms:TextForm id="txtFor" label="For" textProperty="forAttribute" prompt="Element id"/>
 	<forms:DominoFormulaForm label="Computed Formula:" textProperty="formula" prompt="" id="formla"  includeInLayout="true" visible="true" />
     <forms:ToggleButtonSelectedForm label="Indicate required (Displays *)" textProperty="indicateRequired"/>
