Rmove text from formula label (#Moonshine-IDE/Moonshine-IDE#1001)

--- a/src/view/forms/DominoFormulaForm.mxml
+++ b/src/view/forms/DominoFormulaForm.mxml
@@ -69,7 +69,7 @@
         [Bindable]
         public var bindableText:String;
 
-        private var _label:String = "Text";
+        private var _label:String = "";
 
         [Bindable("labelChange")]
         public function get label():String
